2008-12-13  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Replace assert() statements with int_warn().
	Fix handling of enhanced text for which the rotation angle is non-zero.
	Bug #2424595

2008-12-11  Bastian Maerkisch  <bmaerkisch@web.de>
            Axel Thimm <thimm@users.sourceforge.net>

	* configure.in NEWS src/command.c src/gp_hist.h src/graphics.c
	src/history.c src/plot.c src/readline.c src/readline.h src/show.c
	src/term_api.h src/term.c (term_initialise):

	./configure --with-readline=bsd
	Allow gnuplot to use the NetBSD editline library as an alternative to
	gnu readline. This adaptation was originally coded by Bastian Maerkisch
	and subsequently improved by Axel Thimm and by Tormod Volden.
	The routine term_init() is renamed to term_initialise()
	to avoid conflict with an identically named routine in libedit.
	SF Patch #1504831

2008-12-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c: Revise syntax of binary datafile record= and array=
	options. This allows the use of variables and expressions, adds several
	features that were documented but never implemented, and generally 
	cleans up the code.
	    old syntax:    set datafile binary array=128x128
	    new syntax:    set datafile binary array=(128,128)
	The old syntax is still accepted, but is now deprecated
	Bug #2378535

	* docs/gnuplot.doc demo/image.dem demo/rgbalpha.dem demo/image2.dem
	demo/circles.dem: Update docs and demos to use the new syntax.

	* src/gadgets.c src/gadgets.h src/graph3d.c src/save.c src/set.c
	src/show.c src/unset.c docs/gnuplot.doc:
	Modify command 'set view equal_axes' to accept suboptions xy and xyz.
	`set view equal xy` uses the same scale for the x and y axes (as before)
	`set view equal xyz` additionally uses that same scale for the z axis 

2008-12-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/color.h src/gadgets.c src/gadgets.h src/graphics.c src/misc.c
	src/misc.h src/plot2d.c src/save.c src/set.c src/show.c src/term_api.h